# QuickDllProxy

./: .gitignore  README.md
example/: CMakeLists.txt
example/demo_dbghelp/: CMakeLists.txt  ExportListing.inc  dllmain.cpp  proxy.cpp
example/demo_winhttp/: CMakeLists.txt  dllmain.cpp  winhttp_exports.inc
example/vcpkg_port/quickdllproxy/: portfile.cmake  vcpkg.json
include/QuickDllProxy/: DllProxy.h  DllProxyImpl.inl
